# denodo-automation

./: main.py  pyproject.toml
automation/: table_statistics.py  update_statistics.py
config/: statistics.yaml
utils/: denodo_connection.py
